--- a/class-activity-2.Rmd
+++ b/class-activity-2.Rmd
@@ -68,6 +68,7 @@ boxplot(D4$total_enrollment ~ D4$DBN)
 ```{r}
 #Use matrix notation to select columns 5,6, 21, 22, 23, 24
 D5 <- D2[,c(5,6, 21:24)]
+D5
 #Draw a matrix of plots for every combination of variables
 pairs(D5)
 ```
@@ -76,34 +77,76 @@ pairs(D5)
 1. Create a simulated data set containing 100 students, each with a score from 1-100 representing performance in an educational game. The scores should tend to cluster around 75. Also, each student should be given a classification that reflects one of four interest groups: sport, music, nature, literature.
 
 ```{r}
-#rnorm(100, 75, 15) creates a random sample with a mean of 75 and standard deviation of 20
+#rnorm(100, 75, 20) creates a random sample with a mean of 75 and standard deviation of 20
 #pmax sets a maximum value, pmin sets a minimum value
 #round rounds numbers to whole number values
 #sample draws a random samples from the groups vector according to a uniform distribution
 set.seed(123)
-sample<-rnorm(100,75,20) 
-sample
-pmax<-max(sample)
-pmax
-pmin<-min(sample)
-pmin
-round(sample,digits=0)
-round(pmax,digits=0)
-round(pmin,digits=0)
+student_id<-seq(1,100, by=1)
+student_id
+require(rootSolve)
+require(msm)
 
-uniform_distribution<-runif(sample, min = 0, max = 1)
+phi <- function(z) {
+    dnorm(z)
+}
+
+Phi <- function(z) {
+    pnorm(z)
+}
+
+Mean <- function(mu, sigma, a, b) {
+    alfa <-  (a - mu) / sigma
+    beta <-  (b - mu) / sigma
+
+    Z <-  Phi(beta) - Phi(alfa)
+
+    mu + sigma*(phi(alfa) - phi(beta))/Z
+}
+
+f <- function(mu, mean, sigma, a, b) {
+    mean - Mean(mu, sigma, a, b)
+}
+
+a <-  1
+b <-  100
+mean  <- 75
+sigma <- 20
+
+# find mu for desired mean
+q <- uniroot(f, c(a, b), mean, sigma, a, b)
+mu <- q$root
+
+print(sprintf("Found mu = %f for the desired mean %f and sigma %f", mu, mean, sigma))
+
+# sampling test
+set.seed(123)
+N = 100
+sample_scores<- rtnorm(N, mean=mu, sd=sigma, lower=a, upper=b)
+sample_scores
+
+
+maxi<-pmax(sample_scores,1)
+maxi
+mini<-pmin(sample_scores,100)
+mini
+round(sample_scores,digits=0)
+round(maxi,digits=0)
+round(mini,digits=0)
+
+uniform_distribution<-runif(sample_scores, min = 0, max = 1)
 uniform_distribution
 hist(uniform_distribution)
 
+interest<-c("sport", "music", "nature", "literature")
+#incorrect
+assign(paste(names(sample_scores), collapse=""), interest)
 
-
-
-```
 
 2. Using base R commands, draw a histogram of the scores. Change the breaks in your histogram until you think they best represent your data.
 
 ```{r}
-
+hist(sample_scores,breaks = 100)
 ```
 
 
@@ -111,7 +154,19 @@ hist(uniform_distribution)
 
 ```{r}
 #cut() divides the range of scores into intervals and codes the values in scores according to which interval they fall. We use a vector called `letters` as the labels, `letters` is a vector made up of the letters of the alphabet.
+#not correct...
+letters<-c("A","B","C","D","E","F","G","H","I","J")
+score_divides<-cut(sample_scores, 10, letters = NULL)
+score_divides
 
+v<-score_divides
+names(v)<-letters
+v
+
+assign(paste(names(v), collapse=""), v)
+letters
+
+```
 ```
 
 4. Now using the colorbrewer package (RColorBrewer; http://colorbrewer2.org/#type=sequential&scheme=BuGn&n=3) design a pallette and assign it to the groups in your data on the histogram.
